// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Menu 1`] = `
<div
  className="wrapper"
>
  <button
    aria-controls="123e4567-e89b-12d3-a456-426655440002"
    aria-expanded={false}
    aria-haspopup={true}
    className="button base hasIcon work secondary"
    disabled={false}
    id="123e4567-e89b-12d3-a456-426655440001"
    onClick={[Function]}
  >
    <div
      className="icon more base"
    />
    <span
      className="base extraBold small uppercase green"
    >
      More Actions
    </span>
  </button>
</div>
`;

exports[`renders a Menu with custom activator 1`] = `
<div
  className="wrapper"
>
  <button
    aria-controls="123e4567-e89b-12d3-a456-426655440004"
    aria-expanded={false}
    aria-haspopup={true}
    className="button base work primary"
    disabled={false}
    id="123e4567-e89b-12d3-a456-426655440003"
    onClick={[Function]}
  >
    <span
      className="base extraBold small uppercase white"
    >
      Menu
    </span>
  </button>
</div>
`;
